--- a/sass/ideas.scss
+++ b/sass/ideas.scss
@@ -56,19 +56,21 @@
 }
 
 .scroll-pane {
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: 25px;
+  width: 685px;
+  height: 570px;
+  text-align: right;
+  display: none;
+  flex-direction: column;
+  align-items: flex-end;
+  background: transparent;
+  color: $light-color;
+  overflow-y: scroll;
+
   @media (min-width: $desktop-width) {
-    margin-bottom: 20px;
-    margin-left: auto;
-    margin-right: 25px;
-    width: 685px;
-    height: 570px;
-    text-align: right;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    background: transparent;
-    color: $light-color;
-    overflow-y: scroll;
   }
 }
 
@@ -105,19 +107,20 @@
   }
 }
 
-.ideas__text {
+.ideas__text,
+.ideas__note {
   margin: 0 20px 20px;
   font-size: 12px;
   line-height: 16px;
   font-weight: 700;
   height: 140px;
+  color: $light-color;
   overflow-y: hidden;
 
   @media (min-width: $tablet-width) {
     font-size: 14px;
     line-height: 16px;
     font-weight: 400;
-
   }
 
   @media (min-width: $desktop-width) {
@@ -129,29 +132,34 @@
   }
 }
 
+.ideas__note {
+  @media (min-width: $desktop-width) {
+    padding: 20px 0;
+    max-width: 768px;
+    font-size: 14px;
+  }
+}
+
 .ideas__slide {
-  display: none;
+  display: flex;
   min-height: 200px;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   color: $light-color;
 
-  &--active {
-    display: flex;
-  }
+  //&--active {
+  //  display: flex;
+  //}
 
   @media (min-width: $desktop-width) {
-    &--desktop {
-      margin-bottom: 20px;
-      min-height: auto;
-      display: flex;
-      align-items: flex-end;
-    }
+    margin-bottom: 20px;
+    min-height: auto;
+    align-items: flex-end;
   }
 }
 
-.ideas__btn {
+/*.ideas__btn {
   display: block;
   position: absolute;
   top: 250px;
@@ -189,7 +197,7 @@
   right: 40px;
   top: 29%;
   background-image: url('../images/right-arrow-white.svg');
-}
+}*/
 
 .ideas__link {
   display: block;
