--- a/sass/partner.scss
+++ b/sass/partner.scss
@@ -38,6 +38,7 @@
   padding-right: 20px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: #ffffff;
 
   @media (min-width: $tablet-width) {
@@ -73,6 +74,10 @@
   &:active {
     opacity: 0.25;
   }
+}
+
+.partner__img {
+  align-self: center;
 }
 
 .swiper-button-next--1,
