--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,9 @@
 /*
-Theme Name: Food-Diabetes
-Theme URI: foods-diabetes/
+Theme Name: diabet
+Theme URI: diabet/
 Description: Лэндинг для социального проекта
 Author: Ольга
-Author URI: foods-diabetes/
+Author URI: diabet/
 Version: 1.0
 */
 
@@ -21,6 +21,7 @@ Version: 1.0
 @import "team";
 @import "stat";
 @import "result";
+@import "gallery";
 @import "contacts";
 @import "form";
 @import "footer";
